--- a/templates/agency/redactor_detail.html
+++ b/templates/agency/redactor_detail.html
@@ -4,6 +4,7 @@
   <h1>
     Username: {{ redactor.username }}
     <a href="{% url 'agency:redactor-update' pk=redactor.id %}">Update</a>
+    <a href="{% url 'agency:redactor-delete' pk=redactor.id %}">Delete</a>
   </h1>
 
   <p><strong>First name:</strong> {{ redactor.first_name }}</p>
