--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -21,17 +21,12 @@
 
     <!-- Right side of the navbar -->
     <div class="navbar-nav ml-auto">
+
       {% if user.is_authenticated %}
-        <li class="nav-item">
-          <span class="navbar-text">User: <a href="">{{ user.get_username }}</a></span>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Logout</a>
-        </li>
+        <li class="list-group-item">Hello, <a href="{{ user.get_absolute_url }}">{{ user.get_username }}</a></li>
+        <li class="list-group-item"><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
       {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="">Login</a>
-        </li>
+        <li class="list-group-item"><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
       {% endif %}
 
       {% if request.path == '/' %}
