Add newspaper list & detail pages, posibility to create, edit, delete newspaper.

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -6,7 +6,7 @@
         <a class="nav-link" href="{% url 'agency:redactor-list' %}">Our redactors</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Newspapers</a>
+        <a class="nav-link" href="{% url 'agency:newspaper-list' %}">Newspapers</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="">Topics</a>
