--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
 {% block content %}
 
 {% endblock %}
+{% block pagination %}
+  {% include "includes/pagination.html" %}
+{% endblock %}
 </body>
 
 </html>
