--- a/templates/agency/newspaper_detail.html
+++ b/templates/agency/newspaper_detail.html
@@ -11,7 +11,7 @@
   <p><strong>Published at:</strong> {{ newspaper.published_date }}</p>
   <p><strong>Published by:</strong>
     {% for publisher in newspaper.publishers.all %}
-      <li>{{ publisher.first_name }} {{ publisher.last_name }} ({{ publisher.username }})</li>
+      <li>{{ publisher.first_name }} {{ publisher.last_name }} (<a href="{{ publisher.get_absolute_url }}">{{ publisher.username }}</a>)</li>
     {% endfor %}
   </p>
   <br>
