--- a/templates/agency/redactor_detail.html
+++ b/templates/agency/redactor_detail.html
@@ -10,5 +10,8 @@
   <p><strong>First name:</strong> {{ redactor.first_name }}</p>
   <p><strong>Last name:</strong> {{ redactor.last_name }}</p>
   <p><strong>Years of experience:</strong> {{ redactor.years_of_experience }}</p>
-  <p><strong>Is staff:</strong> {{ redactor.is_staff }}</p>
+  <p><strong>Newspapers written by this redactor:</strong></p>
+  {% for newspaper in redactor.newspapers.all %}
+      <p><a href="{% url 'agency:newspaper-detail' pk=newspaper.id %}">{{ newspaper.title }}</a></p>
+    {% endfor %}
 {% endblock %}
