--- a/templates/agency/newspaper_detail.html
+++ b/templates/agency/newspaper_detail.html
@@ -1,19 +1,35 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
-  <h1>
-    Title: {{ newspaper.title }}
-        <a href="{% url 'agency:newspaper-update' pk=newspaper.id %}">Edit</a>
-        <a href="{% url 'agency:newspaper-delete' pk=newspaper.id %}">Delete</a>
-  </h1>
+  <div id="wrapper">
+    <!-- Main -->
+    <div id="main">
 
-  <p><strong>Topic:</strong> {{ newspaper.topic }}</p>
-  <p><strong>Published at:</strong> {{ newspaper.published_date }}</p>
-  <p><strong>Published by:</strong>
-    {% for publisher in newspaper.publishers.all %}
-      <li>{{ publisher.first_name }} {{ publisher.last_name }} (<a href="{{ publisher.get_absolute_url }}">{{ publisher.username }}</a>)</li>
-    {% endfor %}
-  </p>
-  <br>
-  <p>{{ newspaper.content }}</p>
+      <!-- Post -->
+      <article class="post">
+        <header>
+          <div class="title">
+            <h2>{{ newspaper.title }}</h2>
+            <a href="{% url 'agency:newspaper-update' pk=newspaper.id %}" class="button">Edit</a>
+            <a href="{% url 'agency:newspaper-delete' pk=newspaper.id %}" class="button">Delete</a>
+          </div>
+          <div class="meta">
+            <time class="published">{{ newspaper.published_date }}</time>
+            {% for publisher in newspaper.publishers.all %}
+              <a href="{{ publisher.get_absolute_url }}" class="author">
+                <span class="name">{{ publisher.first_name }} {{ publisher.last_name }}</span>
+              </a>
+            {% endfor %}
+          </div>
+        </header>
+        <p>{{ newspaper.content }}</p>
+        <footer>
+          <ul class="stats">
+            <li><a href="{{ newspaper.topic.get_absolute_url }}">{{ newspaper.topic }}</a></li>
+          </ul>
+        </footer>
+      </article>
+    </div>
+  </div>
 {% endblock %}
