Adjust topic detail page

--- a/templates/agency/redactor_detail.html
+++ b/templates/agency/redactor_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="button-container">
-    <a href="{% url 'agency:redactor-update' pk=redactor.id %}" class="button small">Update</a>
+    <a href="{% url 'agency:redactor-update' pk=redactor.id %}" class="button small">Edit</a>
     <a href="{% url 'agency:redactor-delete' pk=redactor.id %}" class="button small">Delete</a>
   </div>
   <div class="redactor-info">
