--- a/templates/agency/topic_detail.html
+++ b/templates/agency/topic_detail.html
@@ -1,19 +1,33 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>
-    Name: {{ topic.name }}
-        <a href="{% url 'agency:topic-update' pk=topic.id %}">Edit</a>
-        <a href="{% url 'agency:topic-delete' pk=topic.id %}">Delete</a>
-  </h1>
+  <div class="button-container">
+    <a href="{% url 'agency:topic-update' pk=topic.id %}" class="button small">Edit</a>
+    <a href="{% url 'agency:topic-delete' pk=topic.id %}" class="button small">Delete</a>
+  </div>
+  <h2 style="text-align: center;">
+    {{ topic.name }}
+  </h2>
 
   {% if topic.newspapers.all %}
-  <p>
-    {% for newspaper in topic.newspapers.all %}
-      <li><a href="{{ newspaper.get_absolute_url }}">{{ newspaper.title }}</a> [{{ newspaper.published_date }}]</li>
-    {% endfor %}
-  </p>
+    <section class="posts-of-redactor">
+      <ul class="posts">
+        <li>
+          <article>
+            <header>
+              {% for newspaper in topic.newspapers.all %}
+                <h3><a href="{% url 'agency:newspaper-detail' pk=newspaper.id %}">{{ newspaper.title }}</a></h3>
+                <time class="published">{{ newspaper.published_date }}</time>
+              {% endfor %}
+            </header>
+          </article>
+        </li>
+      </ul>
+    </section>
   {% else %}
     <p>There is no newspapers with this topic yet.</p>
   {% endif %}
+
 {% endblock %}
+
+
