--- a/templates/agency/redactor_confirm_delete.html
+++ b/templates/agency/redactor_confirm_delete.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Are you sure that you want to delete {{ redactor.username }}?</h1>
-  <form action="" method="post">
-    {% csrf_token %}
+  <p style="text-align: center">Are you sure that you want to delete <strong>{{ redactor.username }}</strong>?</p>
 
-    <input type="submit" value="Yes">
-    <a href="{% url 'agency:redactor-detail' redactor.pk %}">No</a>
-  </form>
+  <div class="centered-form">
+    <form action="" method="post">
+      {% csrf_token %}
+
+      <input type="submit" value="Yes">
+      <a href="{% url 'agency:redactor-detail' redactor.pk %}" class="button">No</a>
+    </form>
+  </div>
 {% endblock %}
