--- a/templates/agency/redactor_list.html
+++ b/templates/agency/redactor_list.html
@@ -4,39 +4,31 @@
   <div class="button-container">
     <a href="{% url 'agency:redactor-create' %}" class="button">Add</a>
   </div>
+
   <h1 style="text-align: center;">Redactors</h1>
 
-  <div style="width: 15%;">
+  <div class="search-container">
     <form action="" method="get" style="display: flex; align-items: center;">
       {{ search_form }}
       <input type="submit" value="🔎" style="margin-left: 5px;">
     </form>
   </div>
 
-
-
-  {% if redactor_list %}
-    <table class="table">
-      <tr>
-        <th>Username</th>
-        <th>First name</th>
-        <th>Last name</th>
-        <th>Years of experience</th>
-      </tr>
+  <div class="redactor-container">
+    {% if redactor_list %}
       {% for redactor in redactor_list %}
-        <tr>
-          <td>
-            <a href="{{ redactor.get_absolute_url }}">
-              {{ redactor.username }} {% if user == redactor %} (Me){% endif %}
-            </a>
-          </td>
-          <td>{{ redactor.first_name }}</td>
-          <td>{{ redactor.last_name }}</td>
-          <td>{{ redactor.years_of_experience }}</td>
-        </tr>
+        <div class="redactor-card">
+          <a href="{{ redactor.get_absolute_url }}">
+            <h3>{{ redactor.username }}{% if user == redactor %} (Me){% endif %}</h3>
+          </a>
+          <p>First Name: {{ redactor.first_name }}</p>
+          <p>Last Name: {{ redactor.last_name }}</p>
+          <p>Years of Experience: {{ redactor.years_of_experience }}</p>
+        </div>
       {% endfor %}
-    </table>
-  {% else %}
-    <p>We don't have redactors right now.</p>
-  {% endif %}
+    {% else %}
+      <p>We don't have redactors right now.</p>
+    {% endif %}
+  </div>
+
 {% endblock %}
