--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,19 +1,22 @@
 {% load query_transform %}
-{% if is_paginated %}
-  <ul class="pagination">
-    {% if page_obj.has_previous %}
-      <li class="page-item">
-        <a href="?{% query_transform request page=page_obj.previous_page_number %}" class="button">Prev</a>
-      </li>
-    {% else %}
-      <li><a href="" class="disabled button">Prev</a></li>
-    {% endif %}
-    {% if page_obj.has_next %}
-      <li>
-        <a href="?{% query_transform request page=page_obj.next_page_number %}" class="button">Next</a>
-      </li>
-    {% else %}
-      <li><a href="" class="disabled button">Next</a></li>
-    {% endif %}
-  </ul>
-{% endif %}
+<div class="pagination-container">
+  {% if is_paginated %}
+    <ul class="pagination">
+      {% if page_obj.has_previous %}
+        <li class="page-item">
+          <a href="?{% query_transform request page=page_obj.previous_page_number %}" class="button">Prev</a>
+        </li>
+      {% else %}
+        <li><a href="" class="disabled button">Prev</a></li>
+      {% endif %}
+      {% if page_obj.has_next %}
+        <li>
+          <a href="?{% query_transform request page=page_obj.next_page_number %}" class="button">Next</a>
+        </li>
+      {% else %}
+        <li><a href="" class="disabled button">Next</a></li>
+      {% endif %}
+    </ul>
+  {% endif %}
+</div>
+
