--- a/templates/agency/topic_confirm_delete.html
+++ b/templates/agency/topic_confirm_delete.html
@@ -4,12 +4,10 @@
 
   <p style="text-align: center">Are you sure that you want to delete <strong>{{ topic.name }}</strong>?</p>
 
-  <div class="centered-form">
-    <form action="" method="post">
+    <form action="" method="post" style="text-align: center">
       {% csrf_token %}
       <input type="submit" value="Yes">
       <a href="{% url 'agency:topic-detail' topic.pk %}" class="button">No</a>
     </form>
-  </div>
 
 {% endblock %}
